@@ -429,6 +429,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   application/xhtml+xml. The calls to this have been removed.
 * (bug 14764) Fix regression in from Article::lastModified(), failed to work
   on non-mySQL schemas.
+* (bug 14763) Child classes of Database (DatabasePostgres and DatabaseOracle)
+  had stict standards issues with setFakeSlaveLag() and setFakeMaster().
 
 === API changes in 1.13 ===
 
